@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.6.17) unstable; urgency=low
   * http-server: added timeout for the HTTP request headers
   * response: close template when the content type is wrong
   * delegate-get: implemented response headers
+  * delegate-get: provide status codes and error messages
 
  --
 
